# stablepy

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  stablepy_demo.ipynb
stablepy/: __init__.py
stablepy/diffusers_vanilla/: adetailer.py  constants.py  diffusers.py  extra_model_loaders.py  high_resolution.py  inpainting_canvas.py  lora_loader.py  main_prompt_embeds.py  model.py  multi_emphasis_prompt.py  prompt_weights.py  sampler_scheduler_config.py  style_prompt_config.py  t5_embedder.py  utils.py
stablepy/diffusers_vanilla/extra_pipe/flux/: controlnet_flux.py  pipeline_flux_controlnet.py  pipeline_flux_img2img.py  pipeline_flux_inpaint.py
stablepy/diffusers_vanilla/extra_pipe/sdxl/: controlnet_union.py  pipeline_controlnet_union_inpaint_sd_xl.py  pipeline_controlnet_union_sd_xl.py
stablepy/diffusers_vanilla/extra_scheduler/: scheduling_dpmsolver_multistep.py  scheduling_euler_discrete_variants.py  scheduling_flow_match_dpmsolver_multistep.py
stablepy/diffusers_vanilla/preprocessor/: constans_preprocessor.py  image_utils.py  main_preprocessor.py
stablepy/diffusers_vanilla/preprocessor/controlnet_aux_beta/: preprocessor_utils.py
stablepy/diffusers_vanilla/preprocessor/controlnet_aux_beta/anyline/: __init__.py
stablepy/diffusers_vanilla/preprocessor/controlnet_aux_beta/lineart_standard/: __init__.py
stablepy/diffusers_vanilla/preprocessor/controlnet_aux_beta/teed/: __init__.py
stablepy/diffusers_vanilla/preprocessor/transformers_lib/: pipelines.py
stablepy/diffusers_vanilla/sd_embed/: embedding_funcs.py  prompt_parser.py
stablepy/face_restoration/: codeformer.py  face_restoration_utils.py  gfpgan.py  main_face_restoration.py  restoreformer.py
stablepy/logging/: logging_setup.py
stablepy/upscalers/: esrgan.py  main_upscaler.py  utils_upscaler.py
stablepy/upscalers/pipelines/: base.py  common.py  scunet.py  swinir.py
