[tool.poetry]
name = "stablepy"
version = "0.1.0"
description = "A tool for easy use of stable diffusion"
authors = ["Roger Condori(R3gm) <rocondoriflores@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.1.0+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "0.16.0+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "2.1.0+cu118", source = "pytorch-gpu-src"}
omegaconf = "2.3.0"
diffusers = {git = "https://github.com/huggingface/diffusers.git"}
compel = {git = "https://github.com/damian0815/compel.git"}
invisible-watermark = "^0.2.0"
transformers = "^4.34.0"
accelerate = "^0.23.0"
safetensors = "0.3.3"
mediapy = "^1.1.9"
ipywidgets = "7.7.1"
controlnet-aux = "^0.0.6"
mediapipe = "0.10.1"
pytorch-lightning = "^2.0.9.post0"
asdff = {git = "https://github.com/R3gm/asdff.git"}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
